--- a/CreditApplications.Web/Views/Shared/Navigation.cshtml
+++ b/CreditApplications.Web/Views/Shared/Navigation.cshtml
@@ -33,6 +33,9 @@
                 <li class="nav-item">
                     <a class="nav-link" asp-area="" asp-controller="Department" asp-action="List">Departments</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" asp-area="" asp-controller="Role" asp-action="List">Roles</a>
+                </li>
                 @*<partial name="_LoginPartial" />*@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Messages administration</a>
