--- a/CreditApplications.Web/Views/CreditApplication/Create.cshtml
+++ b/CreditApplications.Web/Views/CreditApplication/Create.cshtml
@@ -18,7 +18,7 @@
                 <select asp-for="CustomerId" asp-items="Model!.AvailableCustomersSelectList" class="form-control"></select>
             </div>
             <div class="form-group">
-                <label asp-for="ProductTypeId" class="control-label"></label>
+                <label asp-for="ProductTypeName" class="control-label"></label>
                 <select asp-for="ProductTypeId" asp-items="Model!.AvailableProductTypesSelectList" class="form-control"></select>
             </div>
             <div class="form-group">
