--- a/CreditApplications.Web/Views/CreditApplication/Create.cshtml
+++ b/CreditApplications.Web/Views/CreditApplication/Create.cshtml
@@ -16,10 +16,14 @@
             <div class="form-group">
                 <label asp-for="CustomerId" class="control-label"></label>
                 <select asp-for="CustomerId" asp-items="Model!.AvailableCustomersSelectList" class="form-control"></select>
+                <span asp-validation-for="CustomerId" class="text-danger"></span>
+
             </div>
             <div class="form-group">
                 <label asp-for="ProductTypeName" class="control-label"></label>
                 <select asp-for="ProductTypeId" asp-items="Model!.AvailableProductTypesSelectList" class="form-control"></select>
+                <span asp-validation-for="ProductTypeId" class="text-danger"></span>
+
             </div>
             <div class="form-group">
                 <label asp-for="Currency" class="control-label"></label>
@@ -41,6 +45,11 @@
                 <input asp-for="Notes" class="form-control" />
                 <span asp-validation-for="Notes" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="ApplicationStatusId" class="control-label"></label>
+                <select asp-for="ApplicationStatusId" asp-items="Model!.AvailableApplicationStatusesSelectList" class="form-control"></select>
+            </div>
+
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
                 <a class="btn btn-primary" asp-action="List">Back to List</a>
