--- a/CreditApplications.Web/Views/CreditApplication/Edit.cshtml
+++ b/CreditApplications.Web/Views/CreditApplication/Edit.cshtml
@@ -22,6 +22,8 @@
             <div class="form-group">
                 <label asp-for="ProductTypeName" class="control-label"></label>
                 <select asp-for="ProductTypeId" asp-items="Model!.AvailableProductTypesSelectList" class="form-control"></select>
+                <span asp-validation-for="ProductTypeId" class="text-danger"></span>
+
             </div>
             <div class="form-group">
                 <label asp-for="Currency" class="control-label"></label>
@@ -39,9 +41,18 @@
                 <span asp-validation-for="DateOfSubmission" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="AmountGranted" class="control-label"></label>
+                <input asp-for="AmountGranted" class="form-control" />
+                <span asp-validation-for="AmountGranted" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Notes" class="control-label"></label>
                 <input asp-for="Notes" class="form-control" />
                 <span asp-validation-for="Notes" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ApplicationStatusId" class="control-label"></label>
+                <select asp-for="ApplicationStatusId" asp-items="Model!.AvailableApplicationStatusesSelectList" class="form-control"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
