Implement collateral feature

--- a/CreditApplications.Web/Views/Shared/Navigation.cshtml
+++ b/CreditApplications.Web/Views/Shared/Navigation.cshtml
@@ -19,7 +19,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" asp-area="" asp-controller="CreditApplication" asp-action="List">Applications</a>
+                    <a class="nav-link" asp-area="" asp-controller="CreditApplication" asp-action="List">Credit applications</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" asp-area="" asp-controller="Customer" asp-action="List">Customers</a>
@@ -37,7 +37,10 @@
                     <a class="nav-link" asp-area="" asp-controller="Role" asp-action="List">Roles</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" asp-area="" asp-controller="Employee" asp-action="List">Emploees</a>
+                    <a class="nav-link" asp-area="" asp-controller="Employee" asp-action="List">Employees</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" asp-area="" asp-controller="Collateral" asp-action="List">Collateral</a>
                 </li>
                 @*<partial name="_LoginPartial" />*@
                 <li class="nav-item dropdown">
