--- a/CreditApplications.Web/Views/Message/Create.cshtml
+++ b/CreditApplications.Web/Views/Message/Create.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div>
-    <h4>Customer create</h4>
+    <h4>Create message</h4>
     <hr />
     <div class="col-md-4">
         <form asp-action="Create">
