--- a/CreditApplications.Mobile/CreditApplications.Mobile/AppShell.xaml
+++ b/CreditApplications.Mobile/CreditApplications.Mobile/AppShell.xaml
@@ -84,6 +84,9 @@
     <FlyoutItem Title="Customers" Icon="icon_feed.png">
         <ShellContent Route="CustomersPage" ContentTemplate="{DataTemplate local:CustomersPage}" />
     </FlyoutItem>
+    <FlyoutItem Title="Credit applications" Icon="icon_feed.png">
+        <ShellContent Route="CustomersPage" ContentTemplate="{DataTemplate local:CreditApplicationsPage}" />
+    </FlyoutItem>
 
     <!-- When the Flyout is visible this will be a menu item you can tie a click behavior to  -->
     <MenuItem Text="Logout" StyleClass="MenuItemLayoutStyle" Clicked="OnMenuItemClicked">
