Implement add creadit application data on mobile

--- a/CreditApplications.Mobile/CreditApplications.Mobile/Views/NewCreditApplicationPage.xaml
+++ b/CreditApplications.Mobile/CreditApplications.Mobile/Views/NewCreditApplicationPage.xaml
@@ -8,13 +8,17 @@
     <ContentPage.Content>
         <ScrollView>
             <StackLayout Spacing="3" Padding="15">
-                <Label Text="Customer" FontSize="Small" />
-                <Picker Title="Pick customer" ItemsSource="{Binding Customers}" ItemDisplayBinding="{Binding CustomerFullName}" SelectedItem="{Binding SelectedCustomer}" FontSize="Small" Margin="0"/>
+                <Picker Title="Customer" ItemsSource="{Binding Customers}" ItemDisplayBinding="{Binding CustomerFullName}" SelectedItem="{Binding SelectedCustomer}" Margin="0" FontSize="Small"/>
+                
+                <Picker Title="Product type" ItemsSource="{Binding ProductTypes}" ItemDisplayBinding="{Binding ProductTypeName}" SelectedItem="{Binding SelectedProductType}" Margin="0" FontSize="Small"/>
 
+                <Label Text="Currency" FontSize="Small" ></Label>
                 <Entry Text="{Binding Currency, Mode=TwoWay}" FontSize="Small" Placeholder="Currency"/>
 
+                <Label Text="Amount requested" FontSize="Small" ></Label>
                 <Entry Text="{Binding AmountRequested, Mode=TwoWay}" FontSize="Small" Placeholder="Amount requested"/>
 
+                <Label Text="Amount granted" FontSize="Small" ></Label>
                 <Entry Text="{Binding AmountGranted, Mode=TwoWay}" FontSize="Small" Placeholder="Amount granted"/>
 
                 <Label Text="Date of submission" FontSize="Small" />
@@ -23,7 +27,10 @@
                 <Label Text="Date of last status change" FontSize="Small" />
                 <DatePicker Date="{Binding DateOfLastStatusChange, Mode=TwoWay}" FontSize="Small" />
 
+                <Label Text="Notes" FontSize="Small" ></Label>
                 <Entry Text="{Binding Notes, Mode=TwoWay}" FontSize="Small" Placeholder="Notes"/>
+
+                <Picker Title="Application status" ItemsSource="{Binding ApplicationStatuses}" ItemDisplayBinding="{Binding ApplicationStatusName}" SelectedItem="{Binding SelectedApplicationStatus}" Margin="0" FontSize="Small"/>
 
                 <StackLayout Orientation="Horizontal">
                     <Button Text="Save" Command="{Binding SaveCommand}" HorizontalOptions="FillAndExpand"></Button>
