--- a/CreditApplications.Web/Views/Department/List.cshtml
+++ b/CreditApplications.Web/Views/Department/List.cshtml
@@ -5,7 +5,7 @@
 }
 <h4>List of departments</h4>
 <hr />
-<a asp-action="Create" class="btn btn-secondary" role="button">Add new departnent</a>
+<a asp-action="Create" class="btn btn-secondary" role="button">Add new department</a>
 <hr />
 
 <div class="container-fluid">
