--- a/CreditApplications.Intranet/Views/Shared/Navigation.cshtml
+++ b/CreditApplications.Intranet/Views/Shared/Navigation.cshtml
@@ -1,46 +1,16 @@
 ﻿<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" asp-area="" asp-controller="CreditApplication" asp-action="Index"><i class="fas fa-university"></i>Credit Applications</a>
+        <a class="navbar-brand" asp-area="" asp-controller="Intranet" asp-action="Index"><i class="fas fa-university"></i>Credit Applications</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarColor02">
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                    <a class="nav-link" asp-area="" asp-controller="CreditApplication" asp-action="Index">
+                    <a class="nav-link" asp-area="" asp-controller="Intranet" asp-action="Index">
                         Main
                         <span class="visually-hidden">(current)</span>
                     </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" asp-area="" asp-controller="Dashboard" asp-action="Index">
-                        Dashboard
-                        <span class="visually-hidden">(current)</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" asp-area="" asp-controller="CreditApplication" asp-action="List">Credit applications</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" asp-area="" asp-controller="Customer" asp-action="List">Customers</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" asp-area="" asp-controller="ProductType" asp-action="List">Product types</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" asp-area="" asp-controller="ApplicationStatus" asp-action="List">Statuses</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" asp-area="" asp-controller="Department" asp-action="List">Departments</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" asp-area="" asp-controller="Role" asp-action="List">Roles</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" asp-area="" asp-controller="Employee" asp-action="List">Employees</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" asp-area="" asp-controller="Collateral" asp-action="List">Collateral</a>
                 </li>
                 @*<partial name="_LoginPartial" />*@
                 <li class="nav-item dropdown">
