--- a/CreditApplications.Intranet/Views/Shared/_Layout.cshtml
+++ b/CreditApplications.Intranet/Views/Shared/_Layout.cshtml
@@ -4,9 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Credit Applications</title>
-    <link rel="stylesheet" href="~/css/slate-bootstrap.min.css" />
     <link rel="stylesheet" href="~/lib/fortawesome/fontawesome-free/css/all.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/pulse-bootstrap.min.css" />
 </head>
 <body>
 <header>
