--- a/CreditApplications.Intranet/Views/Shared/Navigation.cshtml
+++ b/CreditApplications.Intranet/Views/Shared/Navigation.cshtml
@@ -16,9 +16,9 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Messages administration</a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" asp-controller="Message" asp-action="List">Messages list</a>
+                        <a class="dropdown-item" asp-controller="Article" asp-action="List">Messages list</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" asp-controller="Message" asp-action="Create">Add new message</a>
+                        <a class="dropdown-item" asp-controller="Article" asp-action="Create">Add new message</a>
                     </div>
                 </li>
             </ul>
