Modify article model

--- a/CreditApplications.Intranet/Views/Article/Create.cshtml
+++ b/CreditApplications.Intranet/Views/Article/Create.cshtml
@@ -1,12 +1,12 @@
 ﻿@model CreditApplications.DataAccess.Entities.Message
 
 @{
-    ViewData["Title"] = "Create message";
+    ViewData["Title"] = "Create article";
     Layout = "_Layout";
 }
 
 <div>
-    <h4>Create message</h4>
+    <h4>Create article</h4>
     <hr />
     <div class="col-md-4">
         <form asp-action="Create">
