--- a/CreditApplications.Intranet/Views/Article/Delete.cshtml
+++ b/CreditApplications.Intranet/Views/Article/Delete.cshtml
@@ -1,10 +1,10 @@
 ﻿@model CreditApplications.DataAccess.Entities.Message
 
 @{
-    ViewData["Title"] = "Delete message";
+    ViewData["Title"] = "Delete article";
 }
 
-<h4>Delete message</h4>
+<h4>Delete article</h4>
 
 <h5>Are you sure you want to delete this?</h5>
 <hr />
