--- a/CreditApplications.Intranet/Views/Article/Edit.cshtml
+++ b/CreditApplications.Intranet/Views/Article/Edit.cshtml
@@ -1,12 +1,12 @@
 ﻿@model CreditApplications.DataAccess.Entities.Message
 
 @{
-    ViewData["Title"] = "Edit message";
+    ViewData["Title"] = "Edit article";
     Layout = "_Layout";
 }
 
 <div>
-    <h4>Message edit</h4>
+    <h4>Edit article</h4>
     <hr />
     <div class="col-md-4">
         <form asp-action="Edit">
