--- a/CreditApplications.Intranet/Views/Article/Index.cshtml
+++ b/CreditApplications.Intranet/Views/Article/Index.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewData["Title"] = @Model.Title;
 }
-<div><h4>Message details</h4></div>
+<div><h4>Article details</h4></div>
 <hr />
 <div class="card border-primary m-3" style="max-width: 20rem;">
     <div class="card-header">@Model.Title</div>
@@ -11,5 +11,5 @@
     </div>
 </div>
 <br />
-<a asp-controller="Article" asp-action="Index" class="btn btn-primary">Go back to main page</a>
+<a asp-controller="Intranet" asp-action="Index" class="btn btn-primary">Go back to main page</a>
 
