--- a/CreditApplications.Intranet/Views/Article/List.cshtml
+++ b/CreditApplications.Intranet/Views/Article/List.cshtml
@@ -1,11 +1,11 @@
 ﻿@model IEnumerable<CreditApplications.DataAccess.Entities.Message>
 @{
-    ViewData["Title"] = "Messages list";
+    ViewData["Title"] = "Articles list";
     Layout = "_Layout";
 }
-<h4>Messages</h4>
+<h4>Articles</h4>
 <hr />
-<a asp-action="Create" class="btn btn-secondary" role="button">Add new message</a>
+<a asp-action="Create" class="btn btn-secondary" role="button">Add new article</a>
 <hr />
 
 <div class="container-fluid">
