--- a/CreditApplications.Intranet/Views/Shared/Messages.cshtml
+++ b/CreditApplications.Intranet/Views/Shared/Messages.cshtml
@@ -1,12 +1,12 @@
 ﻿@model IEnumerable<CreditApplications.DataAccess.Entities.Message>
 <div class="section">
-    <h4>Messages</h4>
+    <h4>Articles</h4>
     
     <div class="d-flex flex-wrap">
         @foreach (var item in Model)
         {
                 <div class="card border-primary m-3" style="max-width: 20rem;">
-                    <div class="card-header">@Html.ActionLink(item.Title, "Index", "Message", new { id = item.Id }, null)</div>
+                    <div class="card-header">@Html.ActionLink(item.Title, "Index", "Article", new { id = item.Id }, null)</div>
                     <div class="card-body">
                         <p class="card-text">@item.Body</p>
                     </div>
