--- a/CreditApplications.Intranet/Views/Shared/Navigation.cshtml
+++ b/CreditApplications.Intranet/Views/Shared/Navigation.cshtml
@@ -8,17 +8,17 @@
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
                     <a class="nav-link" asp-area="" asp-controller="Intranet" asp-action="Index">
-                        Main
+                        Intranet
                         <span class="visually-hidden">(current)</span>
                     </a>
                 </li>
                 @*<partial name="_LoginPartial" />*@
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Messages administration</a>
+                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Articles administration</a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" asp-controller="Article" asp-action="List">Messages list</a>
+                        <a class="dropdown-item" asp-controller="Article" asp-action="List">Articles list</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" asp-controller="Article" asp-action="Create">Add new message</a>
+                        <a class="dropdown-item" asp-controller="Article" asp-action="Create">Add new article</a>
                     </div>
                 </li>
             </ul>
