--- a/CreditApplications.Intranet/Views/Article/Edit.cshtml
+++ b/CreditApplications.Intranet/Views/Article/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model CreditApplications.DataAccess.Entities.Message
+﻿@model ArticleModel
 
 @{
     ViewData["Title"] = "Edit article";
@@ -22,6 +22,11 @@
                 <label asp-for="Body" class="control-label"></label>
                 <input asp-for="Body" class="form-control" />
                 <span asp-validation-for="Body" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Position" class="control-label"></label>
+                <input asp-for="Position" class="form-control" />
+                <span asp-validation-for="Position" class="text-danger"></span>
             </div>
 
             <div class="form-group">
