--- a/CreditApplications.Intranet/Views/Article/List.cshtml
+++ b/CreditApplications.Intranet/Views/Article/List.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CreditApplications.DataAccess.Entities.Message>
+﻿@model IEnumerable<ArticleModel>
 @{
     ViewData["Title"] = "Articles list";
     Layout = "_Layout";
@@ -17,6 +17,7 @@
                     <th scope="col">@Html.DisplayNameFor(model => model.Id)</th>
                     <th scope="col">@Html.DisplayNameFor(model => model.Title)</th>
                     <th scope="col">@Html.DisplayNameFor(model => model.Body)</th>
+                    <th scope="col">@Html.DisplayNameFor(model => model.Position)</th>
                     <th></th>
                 </tr>
             </thead>
@@ -27,7 +28,9 @@
                         <td>@Html.DisplayFor(modelItem => item.Id)</td>
                         <td>@Html.DisplayFor(modelItem => item.Title)</td>
                         <td>@Html.DisplayFor(modelItem => item.Body)</td>
+                        <td>@Html.DisplayFor(modelItem => item.Position)</td>
                         <td>
+                            <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                             <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                             <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                         </td>
