--- a/CreditApplications.Intranet/Views/_ViewImports.cshtml
+++ b/CreditApplications.Intranet/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using CreditApplications.Intranet
 @using CreditApplications.Intranet.Models
+@using CreditApplications.ApplicationServices.Domain.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
