Fix pages layout

--- a/CreditApplications.Intranet/Views/Shared/Article.cshtml
+++ b/CreditApplications.Intranet/Views/Shared/Article.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CreditApplications.DataAccess.Entities.Message>
+﻿@model IEnumerable<ArticleModel>
 <div class="section">
     <h4>Articles</h4>
     
