--- a/CreditApplications.Intranet/Views/Article/Details.cshtml
+++ b/CreditApplications.Intranet/Views/Article/Details.cshtml
@@ -8,20 +8,44 @@
 
 <hr />
 <div>
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Title)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Body)
-        </dd>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Position)
-        </dd>
-    </dl>
+    <table class="table table-hover">
+        <tbody class="table-secondary">
+        <tr>
+            <th scope="row">
+                @Html.DisplayNameFor(model => model.Title)
+            </th>
+            <td>
+                @Html.DisplayFor(model => model.Title)
+            </td>
+        </tr>
+        <tr>
+            <th scope="row">
+                @Html.DisplayNameFor(model => model.Body)
+            </th>
+            <td>
+                @Html.DisplayFor(model => model.Body)
+            </td>
+        </tr>
+        <tr>
+            <th scope="row">
+                @Html.DisplayNameFor(model => model.LinkTitle)
+            </th>
+            <td>
+                @Html.DisplayFor(model => model.LinkTitle)
+            </td>
+        </tr>
+        <tr>
+            <th scope="row">
+                @Html.DisplayNameFor(model => model.Position)
+            </th>
+            <td>
+                @Html.DisplayFor(model => model.Position)
+            </td>
+        </tr>
+        </tbody>
+    </table>
     <div class="form-group">
-        <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+        <a class="btn btn-primary" asp-action="Edit" asp-route-id="@Model.Id">Edit</a> 
         <a class="btn btn-primary" asp-action="List">Back to list</a>
     </div>
-
 </div>
