--- a/CreditApplications.Intranet/Views/Article/Delete.cshtml
+++ b/CreditApplications.Intranet/Views/Article/Delete.cshtml
@@ -9,17 +9,42 @@
 <h5>Are you sure you want to delete this?</h5>
 <hr />
 <div>
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Title)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Body)
-        </dd>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Position)
-        </dd>
-    </dl>
+    <table class="table table-hover">
+        <tbody class="table-secondary">
+        <tr>
+            <th scope="row">
+                @Html.DisplayNameFor(model => model.Title)
+            </th>
+            <td>
+                @Html.DisplayFor(model => model.Title)
+            </td>
+        </tr>
+        <tr>
+            <th scope="row">
+                @Html.DisplayNameFor(model => model.Body)
+            </th>
+            <td>
+                @Html.DisplayFor(model => model.Body)
+            </td>
+        </tr>
+        <tr>
+            <th scope="row">
+                @Html.DisplayNameFor(model => model.LinkTitle)
+            </th>
+            <td>
+                @Html.DisplayFor(model => model.LinkTitle)
+            </td>
+        </tr>
+        <tr>
+            <th scope="row">
+                @Html.DisplayNameFor(model => model.Position)
+            </th>
+            <td>
+                @Html.DisplayFor(model => model.Position)
+            </td>
+        </tr>
+        </tbody>
+    </table>
 
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
