Add intranet controller

--- a/CreditApplications.Intranet/Views/Article/Index.cshtml
+++ b/CreditApplications.Intranet/Views/Article/Index.cshtml
@@ -11,5 +11,5 @@
     </div>
 </div>
 <br />
-<a asp-controller="Article" asp-action="List" class="btn btn-primary">Go back to main page</a>
+<a asp-controller="Intranet" asp-action="Index" class="btn btn-primary">Go back to main page</a>
 
