--- a/CreditApplications.Intranet/Views/Page/List.cshtml
+++ b/CreditApplications.Intranet/Views/Page/List.cshtml
@@ -5,7 +5,7 @@
 }
 <h4>Pages</h4>
 <hr />
-<a asp-action="Create" class="btn btn-secondary" role="button">Add new article</a>
+<a asp-action="Create" class="btn btn-secondary" role="button">Add new page</a>
 <hr />
 
 <div class="container-fluid">
