--- a/CreditApplications.Intranet/Views/Shared/Navigation.cshtml
+++ b/CreditApplications.Intranet/Views/Shared/Navigation.cshtml
@@ -6,6 +6,13 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarColor02">
             <ul class="navbar-nav me-auto">
+                
+                <li class="nav-item">
+                    <a class="nav-link" asp-area="" asp-controller="Intranet" asp-action="Index">
+                        Intranet
+                        <span class="visually-hidden">(current)</span>
+                    </a>
+                </li>
 
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Pages</a>
