--- a/CreditApplications.Intranet/Views/_ViewImports.cshtml
+++ b/CreditApplications.Intranet/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using CreditApplications.Intranet
 @using CreditApplications.Intranet.Models
+@using CreditApplications.Intranet.ViewModels
 @using CreditApplications.ApplicationServices.Domain.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
