Improve pages selection

--- a/CreditApplications.Intranet/Views/Article/Details.cshtml
+++ b/CreditApplications.Intranet/Views/Article/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model ArticleModel
+﻿@model IntranetViewModel
 
 @{
     ViewData["Title"] = "Article details";
@@ -12,40 +12,48 @@
         <tbody class="table-secondary">
         <tr>
             <th scope="row">
-                @Html.DisplayNameFor(model => model.Title)
+                    @Html.DisplayNameFor(model => model.ArticleModel.PageId)
             </th>
             <td>
-                @Html.DisplayFor(model => model.Title)
+                    @Html.DisplayFor(model => model.ArticleModel.PageId)
             </td>
         </tr>
         <tr>
             <th scope="row">
-                @Html.DisplayNameFor(model => model.Body)
+                    @Html.DisplayNameFor(model => model.ArticleModel.Title)
             </th>
             <td>
-                @Html.DisplayFor(model => model.Body)
+                    @Html.DisplayFor(model => model.ArticleModel.Title)
             </td>
         </tr>
         <tr>
             <th scope="row">
-                @Html.DisplayNameFor(model => model.LinkTitle)
+                    @Html.DisplayNameFor(model => model.ArticleModel.Body)
             </th>
             <td>
-                @Html.DisplayFor(model => model.LinkTitle)
+                    @Html.DisplayFor(model => model.ArticleModel.Body)
             </td>
         </tr>
         <tr>
             <th scope="row">
-                @Html.DisplayNameFor(model => model.Position)
+                    @Html.DisplayNameFor(model => model.ArticleModel.LinkTitle)
             </th>
             <td>
-                @Html.DisplayFor(model => model.Position)
+                    @Html.DisplayFor(model => model.ArticleModel.LinkTitle)
+            </td>
+        </tr>
+        <tr>
+            <th scope="row">
+                    @Html.DisplayNameFor(model => model.ArticleModel.Position)
+            </th>
+            <td>
+                    @Html.DisplayFor(model => model.ArticleModel.Position)
             </td>
         </tr>
         </tbody>
     </table>
     <div class="form-group">
-        <a class="btn btn-primary" asp-action="Edit" asp-route-id="@Model.Id">Edit</a> 
-        <a class="btn btn-primary" asp-action="List">Back to list</a>
+        <a class="btn btn-primary mt-1 me-1" asp-action="Edit" asp-route-id="@Model.ArticleModel.Id">Edit</a>
+        <a class="btn btn-primary mt-1 me-1" asp-action="Index">Back to list</a>
     </div>
 </div>
