--- a/CreditApplications.Intranet/Views/Article/Create.cshtml
+++ b/CreditApplications.Intranet/Views/Article/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model ArticleViewModel
+﻿@model IntranetViewModel
 
 @{
     ViewData["Title"] = "Create article";
@@ -14,7 +14,7 @@
             
             <div class="form-group">
                 <label asp-for="ArticleModel.PageId" class="control-label"></label>
-                <select asp-for="ArticleModel.PageId" asp-items="Model.AvailablePagesSelectList" class="form-control"></select>
+                <select asp-for="ArticleModel.PageId" asp-items="Model.SelectLists.AvailablePagesSelectList" class="form-control"></select>
                 <span asp-validation-for="ArticleModel.PageId" class="text-danger"></span>
             </div>
 
@@ -43,8 +43,8 @@
             </div>
 
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-                <a class="btn btn-primary" asp-action="List">Back to list</a>
+                <input type="submit" value="Create" class="btn btn-primary mt-1 me-1" />
+                <a class="btn btn-primary mt-1 me-1" asp-action="Index">Back to list</a>
             </div>
         </form>
     </div>
