--- a/CreditApplications.Intranet/Views/Article/Delete.cshtml
+++ b/CreditApplications.Intranet/Views/Article/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model ArticleModel
+﻿@model IntranetViewModel
 
 @{
     ViewData["Title"] = "Delete article";
@@ -13,42 +13,50 @@
         <tbody class="table-secondary">
         <tr>
             <th scope="row">
-                @Html.DisplayNameFor(model => model.Title)
+                    @Html.DisplayNameFor(model => model.ArticleModel.PageId)
             </th>
             <td>
-                @Html.DisplayFor(model => model.Title)
+                    @Html.DisplayFor(model => model.ArticleModel.PageId)
             </td>
         </tr>
         <tr>
             <th scope="row">
-                @Html.DisplayNameFor(model => model.Body)
+                    @Html.DisplayNameFor(model => model.ArticleModel.Title)
             </th>
             <td>
-                @Html.DisplayFor(model => model.Body)
+                    @Html.DisplayFor(model => model.ArticleModel.Title)
             </td>
         </tr>
         <tr>
             <th scope="row">
-                @Html.DisplayNameFor(model => model.LinkTitle)
+                    @Html.DisplayNameFor(model => model.ArticleModel.Body)
             </th>
             <td>
-                @Html.DisplayFor(model => model.LinkTitle)
+                    @Html.DisplayFor(model => model.ArticleModel.Body)
             </td>
         </tr>
         <tr>
             <th scope="row">
-                @Html.DisplayNameFor(model => model.Position)
+                    @Html.DisplayNameFor(model => model.ArticleModel.LinkTitle)
             </th>
             <td>
-                @Html.DisplayFor(model => model.Position)
+                    @Html.DisplayFor(model => model.ArticleModel.LinkTitle)
+            </td>
+        </tr>
+        <tr>
+            <th scope="row">
+                    @Html.DisplayNameFor(model => model.ArticleModel.Position)
+            </th>
+            <td>
+                    @Html.DisplayFor(model => model.ArticleModel.Position)
             </td>
         </tr>
         </tbody>
     </table>
 
     <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> 
-        <a class="btn btn-primary"  asp-action="List">Back to list</a>
+        <input type="hidden" asp-for="ArticleModel.Id" />
+        <input type="submit" value="Delete" class="btn btn-danger mt-1 me-1" />
+        <a class="btn btn-primary mt-1 me-1" asp-action="Index">Back to list</a>
     </form>
 </div>
