--- a/CreditApplications.Intranet/Views/Article/Edit.cshtml
+++ b/CreditApplications.Intranet/Views/Article/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model ArticleModel
+﻿@model IntranetViewModel
 
 @{
     ViewData["Title"] = "Edit article";
@@ -11,32 +11,38 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
-
+            <input type="hidden" asp-for="ArticleModel.Id" />
+            
             <div class="form-group">
-                <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
-                <span asp-validation-for="Title" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Body" class="control-label"></label>
-                <input asp-for="Body" class="form-control" />
-                <span asp-validation-for="Body" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="LinkTitle" class="control-label"></label>
-                <input asp-for="LinkTitle" class="form-control" />
-                <span asp-validation-for="LinkTitle" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Position" class="control-label"></label>
-                <input asp-for="Position" class="form-control" />
-                <span asp-validation-for="Position" class="text-danger"></span>
+                <label asp-for="ArticleModel.PageId" class="control-label"></label>
+                <select asp-for="ArticleModel.PageId" asp-items="Model.SelectLists.AvailablePagesSelectList" class="form-control"></select>
+                <span asp-validation-for="ArticleModel.PageId" class="text-danger"></span>
             </div>
 
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-                <a class="btn btn-primary" asp-action="List">Back to list</a>
+                <label asp-for="ArticleModel.Title" class="control-label"></label>
+                <input asp-for="ArticleModel.Title" class="form-control" />
+                <span asp-validation-for="ArticleModel.Title" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ArticleModel.Body" class="control-label"></label>
+                <input asp-for="ArticleModel.Body" class="form-control" />
+                <span asp-validation-for="ArticleModel.Body" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ArticleModel.LinkTitle" class="control-label"></label>
+                <input asp-for="ArticleModel.LinkTitle" class="form-control" />
+                <span asp-validation-for="ArticleModel.LinkTitle" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ArticleModel.Position" class="control-label"></label>
+                <input asp-for="ArticleModel.Position" class="form-control" />
+                <span asp-validation-for="ArticleModel.Position" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <input type="submit" value="Save" class="btn btn-primary mt-1 me-1" />
+                <a class="btn btn-primary mt-1 me-1" asp-action="Index">Back to list</a>
             </div>
         </form>
     </div>
