--- a/CreditApplications.Intranet/Views/Page/Create.cshtml
+++ b/CreditApplications.Intranet/Views/Page/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model PageModel
+﻿@model IntranetViewModel
 
 @{
     ViewData["Title"] = "Create page";
@@ -14,32 +14,32 @@
             
 
             <div class="form-group">
-                <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
-                <span asp-validation-for="Title" class="text-danger"></span>
+                <label asp-for="PageModel.Title" class="control-label"></label>
+                <input asp-for="PageModel.Title" class="form-control" />
+                <span asp-validation-for="PageModel.Title" class="text-danger"></span>
             </div>
 
             <div class="form-group">
-                <label asp-for="Body" class="control-label"></label>
-                <input asp-for="Body" class="form-control" />
-                <span asp-validation-for="Body" class="text-danger"></span>
+                <label asp-for="PageModel.Body" class="control-label"></label>
+                <input asp-for="PageModel.Body" class="form-control" />
+                <span asp-validation-for="PageModel.Body" class="text-danger"></span>
             </div>
             
             <div class="form-group">
-                <label asp-for="LinkTitle" class="control-label"></label>
-                <input asp-for="LinkTitle" class="form-control" />
-                <span asp-validation-for="LinkTitle" class="text-danger"></span>
+                <label asp-for="PageModel.LinkTitle" class="control-label"></label>
+                <input asp-for="PageModel.LinkTitle" class="form-control" />
+                <span asp-validation-for="PageModel.LinkTitle" class="text-danger"></span>
             </div>
 
             <div class="form-group">
-                <label asp-for="Position" class="control-label"></label>
-                <input asp-for="Position" class="form-control" />
-                <span asp-validation-for="Position" class="text-danger"></span>
+                <label asp-for="PageModel.Position" class="control-label"></label>
+                <input asp-for="PageModel.Position" class="form-control" />
+                <span asp-validation-for="PageModel.Position" class="text-danger"></span>
             </div>
 
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-                <a class="btn btn-primary" asp-action="List">Back to list</a>
+                <input class="btn btn-primary mt-1 me-1" type="submit" value="Create" />
+                <a class="btn btn-primary mt-1 me-1" asp-action="Index">Back to list</a>
             </div>
         </form>
     </div>
