--- a/CreditApplications.Intranet/Views/Page/Edit.cshtml
+++ b/CreditApplications.Intranet/Views/Page/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model PageModel
+﻿@model IntranetViewModel
 
 @{
     ViewData["Title"] = "Edit page";
@@ -11,32 +11,32 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="PageModel.Id" />
 
             <div class="form-group">
-                <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
-                <span asp-validation-for="Title" class="text-danger"></span>
+                <label asp-for="PageModel.Title" class="control-label"></label>
+                <input asp-for="PageModel.Title" class="form-control" />
+                <span asp-validation-for="PageModel.Title" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Body" class="control-label"></label>
-                <input asp-for="Body" class="form-control" />
-                <span asp-validation-for="Body" class="text-danger"></span>
+                <label asp-for="PageModel.Body" class="control-label"></label>
+                <input asp-for="PageModel.Body" class="form-control" />
+                <span asp-validation-for="PageModel.Body" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="LinkTitle" class="control-label"></label>
-                <input asp-for="LinkTitle" class="form-control" />
-                <span asp-validation-for="LinkTitle" class="text-danger"></span>
+                <label asp-for="PageModel.LinkTitle" class="control-label"></label>
+                <input asp-for="PageModel.LinkTitle" class="form-control" />
+                <span asp-validation-for="PageModel.LinkTitle" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Position" class="control-label"></label>
-                <input asp-for="Position" class="form-control" />
-                <span asp-validation-for="Position" class="text-danger"></span>
+                <label asp-for="PageModel.Position" class="control-label"></label>
+                <input asp-for="PageModel.Position" class="form-control" />
+                <span asp-validation-for="PageModel.Position" class="text-danger"></span>
             </div>
 
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-                <a class="btn btn-primary" asp-action="List">Back to list</a>
+                <input type="submit" value="Save" class="btn btn-primary mt-1 me-1" />
+                <a class="btn btn-primary mt-1 me-1" asp-action="Index">Back to list</a>
             </div>
         </form>
     </div>
