--- a/CreditApplications.Intranet/Views/Page/Index.cshtml
+++ b/CreditApplications.Intranet/Views/Page/Index.cshtml
@@ -1,29 +1,26 @@
-﻿@model IEnumerable<PageModel>
+﻿@model IntranetViewModel
 @{
     ViewData["Title"] = "Pages list";
     Layout = "_Layout";
 }
 <h4>Pages</h4>
-<hr />
 <a asp-action="Create" class="btn btn-secondary" role="button">Add new page</a>
-<hr />
-
 <div class="container-fluid">
     <div class="row">
 
         <table class="table table-hover">
             <thead>
             <tr>
-                <th scope="col">@Html.DisplayNameFor(model => model.Id)</th>
-                <th scope="col">@Html.DisplayNameFor(model => model.Title)</th>
-                <th scope="col">@Html.DisplayNameFor(model => model.Body)</th>
-                <th scope="col">@Html.DisplayNameFor(model => model.LinkTitle)</th>
-                <th scope="col">@Html.DisplayNameFor(model => model.Position)</th>
+                    <th scope="col">@Html.DisplayNameFor(model => model.PageModel.Id)</th>
+                    <th scope="col">@Html.DisplayNameFor(model => model.PageModel.Title)</th>
+                <th scope="col">@Html.DisplayNameFor(model => model.PageModel.Body)</th>
+                <th scope="col">@Html.DisplayNameFor(model => model.PageModel.LinkTitle)</th>
+                <th scope="col">@Html.DisplayNameFor(model => model.PageModel.Position)</th>
                 <th></th>
             </tr>
             </thead>
             <tbody>
-            @foreach (var item in Model)
+            @foreach (var item in Model.Pages)
             {
                 <tr class="table-primary">
                     <td>@Html.DisplayFor(modelItem => item.Id)</td>
