--- a/CreditApplications.Intranet/Views/Shared/Navigation.cshtml
+++ b/CreditApplications.Intranet/Views/Shared/Navigation.cshtml
@@ -1,18 +1,23 @@
-﻿<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+﻿@model IntranetViewModel
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container-fluid">
-        <a class="navbar-brand" asp-area="" asp-controller="Intranet" asp-action="Index"><i class="fas fa-university"></i>Credit Applications</a>
+        <a class="navbar-brand" asp-area="" asp-controller="Intranet" asp-action="Index" asp-route-id="0"><i class="fas fa-university"></i>Credit Applications Intranet</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarColor02">
             <ul class="navbar-nav me-auto">
-
-                <li class="nav-item">
-                    <a class="nav-link" asp-area="" asp-controller="Intranet" asp-action="Index">
-                        Intranet
-                        <span class="visually-hidden">(current)</span>
-                    </a>
-                </li>
+                
+                @foreach (var item in Model.Pages)
+                {
+                    <li class="nav-item">
+                        <a class="nav-link" asp-area="" asp-controller="Intranet" asp-action="Index" asp-route-id="@item.Id">
+                            @item.LinkTitle
+                            <span class="visually-hidden">(current)</span>
+                        </a>
+                    </li>
+                }
                 
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Administration</a>
@@ -23,7 +28,7 @@
 
                         <div class="dropdown-divider"></div>
                     
-                        <a class="dropdown-item" asp-controller="Article" asp-action="List">Articles list</a>
+                        <a class="dropdown-item" asp-controller="Article" asp-action="Index">Articles list</a>
                         <a class="dropdown-item" asp-controller="Article" asp-action="Create">New article</a>
                     </div>
 
