Modify article and page models

--- a/CreditApplications.Intranet/Views/Article/Read.cshtml
+++ b/CreditApplications.Intranet/Views/Article/Read.cshtml
@@ -11,5 +11,5 @@
     </div>
 </div>
 <br />
-<a asp-controller="Intranet" asp-action="Index" class="btn btn-primary mt-1 me-1">Go back to main page</a>
+<a class="btn btn-primary mt-1 me-1" asp-controller="Intranet" asp-action="Index" asp-route-id="@Model.ArticleModel.PageId">Go back to main page</a>
 
