--- a/CreditApplications.Intranet/Views/Shared/Navigation.cshtml
+++ b/CreditApplications.Intranet/Views/Shared/Navigation.cshtml
@@ -2,7 +2,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container-fluid">
-        <a class="navbar-brand" asp-area="" asp-controller="Intranet" asp-action="Index" asp-route-id="0"><i class="fas fa-university"></i>Credit Applications Intranet</a>
+        <a class="navbar-brand" asp-area="" asp-controller="Intranet" asp-action="Index" asp-route-id=""><i class="fas fa-university"></i>Credit Applications Intranet</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
