--- a/CreditApplications.Web/Views/Shared/Navigation.cshtml
+++ b/CreditApplications.Web/Views/Shared/Navigation.cshtml
@@ -34,7 +34,7 @@
                     <a class="nav-link" asp-area="" asp-controller="Department" asp-action="List">Departments</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" asp-area="" asp-controller="Role" asp-action="List">Roles</a>
+                    <a class="nav-link" asp-area="" asp-controller="ProcessRole" asp-action="List">Roles</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" asp-area="" asp-controller="Employee" asp-action="List">Employees</a>
