--- a/CreditApplications.Intranet/Views/Shared/Navigation.cshtml
+++ b/CreditApplications.Intranet/Views/Shared/Navigation.cshtml
@@ -8,7 +8,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarColor02">
             <ul class="navbar-nav me-auto">
-                
+
                 @foreach (var item in Model.Pages)
                 {
                     <li class="nav-item">
@@ -18,23 +18,33 @@
                         </a>
                     </li>
                 }
-                
+
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Administration</a>
-                    
+
                     <div class="dropdown-menu">
                         <a class="dropdown-item" asp-controller="Page" asp-action="Index">Pages list</a>
                         <a class="dropdown-item" asp-controller="Page" asp-action="Create">New page</a>
 
                         <div class="dropdown-divider"></div>
-                    
+
                         <a class="dropdown-item" asp-controller="Article" asp-action="Index">Articles list</a>
                         <a class="dropdown-item" asp-controller="Article" asp-action="Create">New article</a>
                     </div>
-
                 </li>
-                @*<partial name="_LoginPartial" />*@
+
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">User</a>
+
+                    <div class="dropdown-menu">
+                        <partial name="_LoginPartial" />
+                    </div>
+                </li>
             </ul>
+            <form class="d-flex">
+                <input class="form-control me-sm-2" type="search" placeholder="Search">
+                <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+            </form>
         </div>
     </div>
 </nav>
