--- a/CreditApplications.Intranet/Views/Shared/_Layout.cshtml
+++ b/CreditApplications.Intranet/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
     <main class="container d-flex flex-nowrap">
         <partial name="NavigationLeft" />
 
-        <div class="pb-3" role="main">
+        <div class="container" role="main">
             @RenderBody()
         </div>
     </main>
