--- a/CreditApplications.Intranet/Views/Shared/_LayoutIdentity.cshtml
+++ b/CreditApplications.Intranet/Views/Shared/_LayoutIdentity.cshtml
@@ -13,7 +13,7 @@
     <partial name="NavigationTopIdentity" />
 
     <main class="container d-flex flex-nowrap">
-        <div class="pb-3" role="main">
+        <div class="container" role="main">
             @RenderBody()
         </div>
     </main>
